# agent_harness

./: .env_example  .gitignore  LEARN.md  LICENSE  README.md  README_ZH.md  config_example.yaml  coverage.json  environment.yml  pyproject.toml
.notes/: chips_20260319.jsonl
examples/: README.md  agent_team.py  deep_research.py  multi_agent_pipeline.py  plan_and_execute.py  react_agent.py  skill_demo.py
examples/agents/: react_agent.py
examples/features/: coding_demo.py  filesystem_demo.py
skills/comm-it-review/: SKILL.md
src/agent_app/tools/: __init__.py
src/agent_harness/: __init__.py  logging_config.py
src/agent_harness/agent/: __init__.py  base.py  conversational.py  hooks.py  planner.py  react.py
src/agent_harness/approval/: __init__.py  handler.py  policy.py  types.py
src/agent_harness/context/: __init__.py  context.py  state.py  variables.py
src/agent_harness/core/: __init__.py  config.py  errors.py  event.py  lifecycle.py  message.py  registry.py
src/agent_harness/hooks/: __init__.py  base.py  composite.py  progress.py  tracing.py
src/agent_harness/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  retry.py  types.py
src/agent_harness/memory/: __init__.py  base.py  compressor.py  long_term.py  retrieval.py  short_term.py  working.py  working_term.py
src/agent_harness/orchestration/: __init__.py  dag.py  pipeline.py  router.py  team.py
src/agent_harness/prompt/: __init__.py  builder.py  library.py  template.py
src/agent_harness/skills/: __init__.py  loader.py
src/agent_harness/tool/: __init__.py  base.py  decorator.py  executor.py  registry.py
src/agent_harness/tracing/: __init__.py  collector.py  hooks.py  tracer.py
src/agent_harness/utils/: __init__.py  async_utils.py  http_retry.py  json_utils.py  theme.py  token_counter.py
tests/: conftest.py
tests/integration/: test_agent_with_tools.py  test_external_tools.py  test_orchestration.py
tests/unit/test_agent/: test_base.py  test_planner.py  test_react.py
tests/unit/test_approval/: test_handler.py  test_policy.py  test_types.py
tests/unit/test_context/: test_context.py
tests/unit/test_core/: test_config.py  test_event.py  test_message.py
tests/unit/test_hooks/: test_hooks.py
tests/unit/test_llm/: test_base.py  test_factory.py  test_ratelimiter.py  test_retry.py  test_stream.py
tests/unit/test_memory/: test_long_term.py  (+3 more)
(+63 files in other folders)
