[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness"
version = "0.3.5"
description = "A complete, extensible agent framework for building AI agents and multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "agent_harness contributors"}
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=1.0,<2.0",
    "anthropic>=0.30,<1.0",
    "jinja2>=3.0,<4.0",
    "tiktoken>=0.7,<1.0",
    "pyyaml>=6.0,<7.0",
    "numpy>=1.24,<3.0",
    "aiohttp>=3.9,<4.0",
    "scikit-learn>=1.3",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
search = [
    "tavily-python>=0.3",
    "google-search-results>=2.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
